styles/main: [patch 3]: fixup description overflow in list page on mobile

--- a/webroot/styles/main.css
+++ b/webroot/styles/main.css
@@ -299,7 +299,7 @@ code {
 	color: var(--tip-color);
 	font-size: 0.94em;
 	word-break: normal;
-	overflow-wrap: break-word;
+	overflow-wrap: anywhere;
 }
 
 #search_box #search_mode {
